# Road-to-LLM-Engineer

./: .gitignore  README.md  pyproject.toml
app/: config.py
app/llms/: gemini_client.py
